tests/errors/erc_local_net_error.nm
component Foo {
    prefix = "U";
    footprint = "foo";

    pin A: power_out = 1;
}

abstract component Main {
    net VCC;

    Foo {
        A: VCC;
    }

    Foo {
        A: VCC;
    }
}